[tool.poetry]
name = "gudako"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
flask = "^2.0.0"
gspread = "^3.7.0"
youtube_dl = "^2021.6.6"
discord-py-slash-command = "^3.0.1"
dinteractions-Paginator = "^1.3.5"
replit = "^3.2.4"
PyNaCl = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
